stylesheets/othree.css
/* ... */
#content p .thumbnail {
  display: inline-block;
  max-width: 100%;
  box-sizing: border-box;
}

#content p img {
  height: auto;
}
#content p a,
#content li a {
  margin: 0 0.2em;
}
#content p a.thumbnail,
#content li a.thumbnail {
  margin: 0;
}

#content table {
  border-collapse: collapse;
  font-family: monospace;
}
#content th, #content td {
  padding: 4px 12px;
}
#content thead {
  border-bottom: 2px solid black;
}

#content header h3 {
  /* text-shadow: rgba(0,0,0,0.5)  1px 1px 1px; */
}

#content figure {
  display: inline-block;
  margin: auto 0;
}
#content figure figcaption {
  line-height: 1.6;
  font-weight: bold;
}

/*bootstrap*/
.thumbnail {
  display: block;
  padding: 4px;
  line-height: 20px;
  border: 1px solid #ddd;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.055);
  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.055);
  box-shadow: 0 1px 3px rgba(0,0,0,0.055);
  -webkit-transition: all .2s ease-in-out;
  -moz-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}
a.thumbnail:hover {
  border-color: #08c;
  -webkit-box-shadow: 0 1px 4px rgba(0,105,214,0.25);
  -moz-box-shadow: 0 1px 4px rgba(0,105,214,0.25);
  box-shadow: 0 1px 4px rgba(0,105,214,0.25);
}
.thumbnail img {
  border-radius: 2px;
  display: block;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
}
figure.thumbnail img {
  border-radius: 2px 2px 0 0;
}

#content .extended {
  display: block;
  margin: 2em 0;
  font-size: 16px;
  font-style: normal;
}

#content header time {
  display: none;
}
/* #content footer a {
padding: 0 0.5em;
border-left: 1px solid #08c;
} */

#comments article {
  display: block;
  list-style: none;
  margin: 0.5em 0;
  padding: 25px;
}
#comments article > *:last-child {
  margin-bottom: 0;
}
#comments h5 {
  margin: 0 0 6px;
  text-decoration: none;
}

#comments article p,
#comments article ol li,
#comments article ul li {
  line-height: 1.8;
}
#comments article p,
#comments article ol,
#comments article ul {
  font-size: 14px;
  margin: 1em 0;
}

#prev-link {
  display: block;
  margin: 1em 0;
  font-size: 24px;
}

aside [role=contentinfo] .pn {
  display: block;
}
aside [role=contentinfo] .pn time {
  display: none;
}
aside [role=contentinfo] strong {
  margin: 0 0.3em;
}

#stickers a {
  margin-bottom: 3px;
}

#search-form {
  height: 4.114em;
  margin: 0;
}

#nav-search {
  margin-top: 5px;
}

#nav-search input,
#search-form input {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 0;
  padding: 4px 14px;
  outline-style: none;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  border-radius: 15px;
  background-color: #fff;
  border: 1px solid #ccc;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border linear .2s,box-shadow linear .2s;
  -moz-transition: border linear .2s,box-shadow linear .2s;
  -o-transition: border linear .2s,box-shadow linear .2s;
  transition: border linear .2s,box-shadow linear .2s;
  height: 20px;
  font-size: 14px;
  line-height: 20px;
  color: #555;
  -webkit-appearance: none;
}
#search-form input:focus {
  border-color: #e9322d;
  -webkit-box-shadow: 0 0 6px #f8b9b7;
  -moz-box-shadow: 0 0 6px #f8b9b7;
  box-shadow: 0 0 6px #f8b9b7;
}

aside {
  font-size: 14px;
  padding-left: 15px;
  padding-right: 30px;
}
aside h2 {
  display: none;
}
aside h3 {
  font-size: 18px;
  line-height: 1.6;
  margin: 0;
}
aside p {
  line-height: 2.057em;
  margin: 0 0 2.057em;
}
aside ol,
aside ul {
  margin: 0 0 2.057em 25px;
}
aside li {
  line-height: 2.057em;
}
aside li span {
  margin: 0 0.3em;
}

address {
  margin: 0;
}
#stickers a {
  display: block;
}


.input-mxlarge {
  width: 100%;
  max-width: 420px;
}

.accesskey {
  display: none;
}

pre, code, pre code {
  font-family: 'Droid Sans Mono', Monaco, monospace;
}
pre {
  margin-top: 2.2em;
  margin-bottom: 2.2em;
  /*bootstrap*/
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 20px;
  word-break: break-all;
  word-wrap: break-word;
  white-space: pre;
  white-space: pre-wrap;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border: 1px solid rgba(0,0,0,0.15);
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
code {
  /*bootstrap*/
  padding: 2px 4px;
  color: #d14;
  background-color: #f7f7f9;
  border: 1px solid #e1e1e8;
}
pre code {
  padding: 0;
  color: inherit;
  background-color: transparent;
  border: 0;
}

footer {
  margin-top: 6em;
}
footer h2.pure-u-1 {
  display: none;
}
footer .pure-u-1 {
  box-sizing: border-box;
  padding-left: 30px;
  padding-left: 30px;
}
footer a {
  line-height: 2;
  vertical-align: top;
  padding: 0 0.5em;
  border-left: 1px solid #08c;
}
footer a:last-of-type {
  border-right: 1px solid #08c;
  margin-right: 1em;
}
/* monthArchive */
#content .month-archive ol {
  display: inline;
  margin: 0;
  padding: 0; 
}
#content .month-archive ol li {
  display: inline;
  padding: 3px;
  color: #ccc;
  background: transparent;
  font-size: 90%;
}
#content .month-archive ol li span {
  margin: 0;
  padding: 0;
  font-size: 100%;
}
#content .month-archive ol a {
  margin: 0;
}
/* ... */

